--- a/webapp/src/main/webapp/WEB-INF/web.xml
+++ b/webapp/src/main/webapp/WEB-INF/web.xml
@@ -104,7 +104,7 @@
 	      through this filter next-->
 	<filter>
         <filter-name>InitializationFilter</filter-name>
-        <filter-class>org.openmrs.web.filter.initialization.InitializationFilter</filter-class>
+        <filter-class>org.openmrs.web.filter.update.InitializationFilter</filter-class>
     </filter>
     <filter-mapping>
 		<filter-name>InitializationFilter</filter-name> 
